--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>es.upm.grise</groupId>
@@ -33,7 +35,8 @@
 
 	<build>
 		<plugins>
-			<!-- https://stackoverflow.com/questions/49398894/unable-to-compile-simple-java-10-java-11-project-with-maven -->
+			<!--
+			https://stackoverflow.com/questions/49398894/unable-to-compile-simple-java-10-java-11-project-with-maven -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -42,7 +45,7 @@
 					<release>11</release>
 				</configuration>
 			</plugin>
-			
+
 			<!-- https://dzone.com/articles/why-your-junit-5-tests-are-not-running-under-maven -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -50,6 +53,46 @@
 				<version>2.22.0</version>
 			</plugin>
 
+			<plugin>
+				<groupId>upm.sdamaso</groupId>
+				<artifactId>test-smell-plugin</artifactId>
+				<version>1.0-SNAPSHOT</version>
+				<executions>
+					<execution>
+						<phase>test</phase>
+					</execution>
+				</executions>
+				<configuration>
+					<csvInput implementation="java.lang.String">${csv.input}</csvInput>
+				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>com.github.javaparser</groupId>
+						<artifactId>javaparser-core</artifactId>
+						<version>3.2.4</version>
+					</dependency>
+					<dependency>
+						<groupId>com.opencsv</groupId>
+						<artifactId>opencsv</artifactId>
+						<version>3.9</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven</groupId>
+						<artifactId>maven-plugin-api</artifactId>
+						<version>3.6.3</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven.plugin-tools</groupId>
+						<artifactId>maven-plugin-annotations</artifactId>
+						<version>3.6.0</version>
+					</dependency>
+					<dependency>
+						<groupId>org.apache.maven</groupId>
+						<artifactId>maven-project</artifactId>
+						<version>2.2.1</version>
+					</dependency>
+				</dependencies>
+			</plugin>
 		</plugins>
 	</build>
 
